[tool.poetry]
name = "tracktolib"
version = "0.47.1"
description = "Utility library for python"
authors = ["Julien Brayere <julien.brayere@tracktor.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tracktor/tracktolib"
repository = "https://github.com/tracktor/tracktolib"
keywords = ["utility"]
classifiers = [
    "Operating System :: OS Independent"
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

python-json-logger = { version = ">=2.0.4", optional = true }
psycopg = { version = ">=3.1.12", optional = true }
minio = { version = ">=7.2.0", optional = true }
aiobotocore = { version = ">=2.9.0", optional = true }
deepdiff = { version = ">=6.6.0", optional = true }
httpx = { version = ">=0.25.0", optional = true }
fastapi = { version = ">=0.103.2", optional = true }
pydantic = { version = ">=2", optional = true }
asyncpg = ">=0.27.0"
rich = { version = ">=13.6.0", optional = true }


[tool.poetry.extras]
logs = ["python-json-logger"]
pg-sync = ["psycopg"]
s3-minio = ["minio"]
s3 = ["aiobotocore"]
tests = ["deepdiff"]
http = ["httpx"]
api = ["fastapi", "pydantic"]
pg = ["asyncpg", "rich"]

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.284"
commitizen = "^3.11.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pydantic = ">=2,<3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=tracktolib -s -q -x --no-cov-on-fail"
testpaths = [
    "tests"
]
python_files = "*.py"
filterwarnings = ["ignore:::.*minio.api*",
    "ignore:.*urllib3.contrib.pyopenssl.*:DeprecationWarning"]

[tool.pyright]
include = ["tracktolib", "tests"]
exclude = []

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.47.1"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "release $current_version → $new_version [skip ci]"


[tool.ruff]
line-length = 120
target-version = "py310"
# Waiting for fix: https://github.com/charliermarsh/ruff/issues/282
ignore = ["E999"]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    # imported but unused
    "F401",
    # unable to detect undefined names
    "F403",
    #
    "F405"
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
