[tool.poetry]
name = "tracktolib"
version = "0.53.0"
description = "Utility library for python"
authors = ["Julien Brayere <julien.brayere@tracktor.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tracktor/tracktolib"
repository = "https://github.com/tracktor/tracktolib"
keywords = ["utility"]
classifiers = [
    "Operating System :: OS Independent"
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

python-json-logger = { version = ">=3.2.1", optional = true }
psycopg = { version = ">=3.1.12", optional = true }
minio = { version = ">=7.2.0", optional = true }
# Needed for minio, otherwise it raises ModuleNotFoundError: No module named 'Crypto.Cipher'
pycryptodome =  { version = ">=3.20.0", optional = true }
aiobotocore = { version = ">=2.9.0", optional = true }
deepdiff = { version = ">=8.1.0", optional = true }
httpx = { version = ">=0.25.0", optional = true }
fastapi = { version = ">=0.103.2", optional = true }
pydantic = { version = ">=2", optional = true }
asyncpg = ">=0.27.0"
rich = { version = ">=13.6.0", optional = true }

[tool.poetry.extras]
logs = ["python-json-logger"]
pg-sync = ["psycopg"]
s3-minio = ["minio", "pycryptodome"]
s3 = ["aiobotocore"]
tests = ["deepdiff"]
http = ["httpx"]
api = ["fastapi", "pydantic"]
pg = ["asyncpg", "rich"]

[tool.poetry.group.dev.dependencies]
commitizen = "^3.11.0"
pytest-cov = "^5.0.0"
pytest = "^8.2.2"
pyright = "^1.1.371"
ruff = "^0.5.2"
pydantic = "^2.8.2"
# Issue for mac with trackit version of multidict
multidict = "^6.0.5"
fastapi ="^0.111.1"
httpx =  "^0.27.0"
psycopg = "^3.2.1"
minio = "^7.2.7"
pycryptodome = "^3.20.0"
aiobotocore = "^2.13.1"
python-json-logger = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=tracktolib -s -q -x --no-cov-on-fail"
testpaths = [
    "tests"
]
python_files = "*.py"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.pyright]
include = ["tracktolib", "tests"]
exclude = []

pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.53.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "release $current_version → $new_version [skip ci]"


[tool.ruff]
line-length = 120
target-version = "py312"
# Waiting for fix: https://github.com/charliermarsh/ruff/issues/282
#ignore = ["E999"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    # imported but unused
    "F401",
    # unable to detect undefined names
    "F403",
    #
    "F405"
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
