[project]
name = "tracktolib"
version = "0.65.1"
authors = [
    { email = "julien.brayere@tracktor.fr" }
]
description = "Utility library for python"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tracktor/tracktolib"
repository = "https://github.com/tracktor/tracktolib"
keywords = ["utility"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
include = [
    "LICENSE"
]
requires-python = ">=3.12,<4.0"

[project.optional-dependencies]
logs = ["python-json-logger>=3.2.1"]
pg-sync = ["psycopg>=3.1.12"]
s3-minio = [
    "minio>=7.2.0",
    # Needed for minio, otherwise it raises ModuleNotFoundError: No module named 'Crypto.Cipher'
    "pycryptodome>=3.20.0",
]
s3 = ["aiobotocore>=2.9.0"]
tests = ["deepdiff>=8.1.0"]
http = ["httpx>=0.25.0"]
api = [
    "fastapi>=0.103.2",
    "pydantic>=2",
]
pg = [
    "asyncpg>=0.27.0",
    "rich>=13.6.0",
]
notion = [
    "niquests>=3.15.2"
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0,<8",
    "pytest>=9.0.1,<10",
    "pyright>=1.1.371",
    "ruff>=0.14.5",
    "pydantic>=2.12.4",
    # Issue for mac with trackit version of multidict
    "multidict>=6.0.5",
    "fastapi>=0.111.1",
    "httpx>=0.27.0",
    "psycopg>=3.2.1",
    "minio>=7.2.7",
    "pycryptodome>=3.23.0",
    "aiobotocore==2.15.2",
    "python-json-logger>=3.2.0",
    "pre-commit>=4.4.0",
]

bump = [
    "commitizen>=4.10.0"
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tracktolib"
module-root = ""

[tool.pytest.ini_options]
addopts = "--cov=tracktolib -s -q -x --no-cov-on-fail"
testpaths = [
    "tests"
]
python_files = "*.py"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.pyright]
include = ["tracktolib", "tests"]
exclude = []

pythonVersion = "3.14"
pythonPlatform = "Linux"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.65.1"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "release $current_version → $new_version [skip ci]"


[tool.ruff]
line-length = 120
target-version = "py314"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    # imported but unused
    "F401",
    # unable to detect undefined names
    "F403",
    #
    "F405"
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
